# GIS-Agent-Harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_STATE.md  Dockerfile  README.md  litellm-config.yaml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: architecture.md  operations.md
goals/: align_vector_to_raster.yaml  declare_source_crs.yaml  repair_invalid_geometry.yaml
plans/: declare_source_crs.yaml
scripts/: clean_local_state.py  demo_failures.py  demo_readme_workflow.py  demo_recovery.py  demo_task.py  generate_sample_data.py  verify_acceptance.py
src/gis_agent_harness/: __init__.py  adversarial_review.py  agent_loop.py  auth_config.py  benchmarking.py  cli.py  cog_viewer.py  config.py  context_compaction.py  dag_runner.py  errors.py  execution_plan.py  faas_planner.py  geo_exception_parser.py  goal_runner.py  guardrails.py  (+29 more)
src/gis_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
step/: GIS-harness-26-5-27-2200.md  GIS-harness-26-5-31-2100.md  GIS-harness-26-6-7-1330.md  GIS-harness-26-6-7-1400.md  GIS-harness.md
tests/: conftest.py  test_advanced_geoai.py  test_agent_loop.py  test_blueprint_execution.py  test_cli.py  test_config.py  test_e2e_smoke.py  test_execution_plan.py  test_goal_cli.py  test_guardrails.py  test_health_report.py  test_improvement_catalog.py  test_llm_adapters.py  test_llm_router.py  test_local_ops.py  test_project_metrics.py  test_review.py  test_spatial_context.py  test_spatial_tools.py  test_telemetry.py  test_templates.py  test_tui_smoke.py
(+4 files in other folders)
